# geometrybaseduavcommpaper

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml
configs/: default.yaml
dronecomm/: __init__.py  antenna.py  channel.py  config.py  geometry.py  heuristic.py  interference.py  metrics.py  scenario.py  simulation.py  sinr.py  visualization.py
notebooks/: analyze_per_drone_angle_sweep.ipynb  analyze_telecom_experiment.ipynb  analyze_telecom_statistical.ipynb
paper/: heuristic_paper_v2.tex  main.tex  references.bib
scripts/: extract_telecom_snapshots.py  extract_telecom_users.py  plot_environment_figure.py  run_heuristic_experiment.py  run_per_drone_angle_sweep.py  run_telecom_statistical.py
